--- a/www/index.html
+++ b/www/index.html
@@ -17,5 +17,5 @@
     <h3>ES04 - Gestione delle sessioni nelle applicazioni web</h3>
     <br /><br />
     <h3>ES05 - Login con PHP e MySql</h3>
-    <a href="mysql/es-05/index.php">Pagina principale</a><br />
+    <a href="es-05/index.php">Pagina principale</a><br />
 </body>
