--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <h3>ES03 - Form validation</h3>
     <br /><br />
     <h3>ES04 - Gestione delle sessioni nelle applicazioni web</h3>
+    <a href="es-04/index.php">Pagina principale</a><br />
     <br /><br />
     <h3>ES05 - Login con PHP e MySql</h3>
     <a href="es-05/index.php">Pagina principale</a><br />
