--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <h3>ES05 - Login con PHP e MySql</h3>
     <a href="es-05/index.php">Pagina principale</a><br />
     <br /><br />
+    <h3>ES05 - Login con PHP e MySql</h3>
+    <a href="es-05/visualizzazione_tabelle.php">Pagina principale</a><br />
+    <br /><br />
     <h3>ES06 - Registrazione utente e gestione profilo - Esercizio a</h3><br />
     <a href="es-06/idenx.php">Pagina principale</a><br />
 </body>
