--- a/www/index.html
+++ b/www/index.html
@@ -25,4 +25,6 @@
     <br /><br />
     <h3>ES06 - Registrazione utente e gestione profilo - Esercizio a</h3><br />
     <a href="es-06/idenx.php">Pagina principale</a><br />
+    <h3>login-registrazione</h3><br />
+    <a href="login-registrazione/login.php">Pagina principale</a><br />
 </body>
