--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <a href="es-05/visualizzazione_tabelle.php">Pagina principale</a><br />
     <br /><br />
     <h3>ES06 - Registrazione utente e gestione profilo - Esercizio a</h3><br />
-    <a href="es-06/index(2).php">Pagina principale</a><br />
+    <a href="es-06/index.php">Pagina principale</a><br />
     <h3>login-registrazione</h3><br />
     <a href="login-registrazione/login.php">Pagina principale</a><br />
 </body>
