--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <a href="es-05/d/index.php">Pagina principale</a><br />
     <br /><br />
     <h3>ES05 - Login con PHP e MySql</h3>
-    <a href="es-05/test.php">Pagina principale</a><br />
+    <a href="es-05/c/index.php">Pagina principale</a><br />
     <br /><br />
     <h3>ES06 - Registrazione utente e gestione profilo - Esercizio a</h3><br />
     <a href="es-06/index.php">Pagina principale</a><br />
