--- a/www/index.html
+++ b/www/index.html
@@ -17,11 +17,14 @@
     <h3>ES04 - Gestione delle sessioni nelle applicazioni web</h3>
     <a href="es-04/index.php">Pagina principale</a><br />
     <br /><br />
-    <h3>ES05 - Login con PHP e MySql</h3>
-    <a href="es-05/d/index.php">Pagina principale</a><br />
+    <h3>ES05 - Login con PHP e MySql A-B</h3>
+    <a href="es-05/a-b/test.php">Pagina principale</a><br />
     <br /><br />
-    <h3>ES05 - Login con PHP e MySql</h3>
+    <h3>ES05 - Login con PHP e MySql C</h3>
     <a href="es-05/c/index.php">Pagina principale</a><br />
+    <br /><br />
+    <h3>ES05 - Login con PHP e MySql D</h3>
+    <a href="es-05/d/index.php">Pagina principale</a><br />
     <br /><br />
     <h3>ES06 - Registrazione utente e gestione profilo - Esercizio a</h3><br />
     <a href="es-06/index.php">Pagina principale</a><br />
